--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!-- 以表格方式将重要的链接备忘在此 --> 
 <!-- 标题 -->
-<table border="1">
+<table border="1" align="center">
   <tr>
     <th>主题</th>
     <th>链接地址</th>
