--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
  <!-- 第一行 -->  
   <tr>
     <td>
-      四大交易费率
+      baidu
     </td>
     <td>
-      <a href="http://simnow.sfit.com.cn/product.action" target="_blank">
-        http://simnow.sfit.com.cn/product.action
+      <a href="http://www.baidu.com" target="_blank">
+        http://www.baidu.com
       </a>          
     </td>
     <td>
-      simnow 的说明
+      baidu
     </td>
-  </tr>
+  </tr>  
+ 
   
  <!-- 第二行 -->
   <tr>
@@ -36,6 +37,7 @@
       simnow 的说明
     </td>
   </tr>
+
   
   
   
