--- a/index.html
+++ b/index.html
@@ -1,44 +1,5 @@
- <!-- 以表格方式将重要的链接备忘在此 --> 
-<!-- 标题 -->
-<table border="1" align="center">
-  <tr>
-    <th>主题</th>
-    <th>链接地址</th>
-    <th>说明</th>
-  </tr>
-  
- <!-- 第一行 -->  
-  <tr>
-    <td>
-      baidu
-    </td>
-    <td>
-      <a href="http://www.baidu.com" target="_blank">
-        http://www.baidu.com
-      </a>          
-    </td>
-    <td>
-      baidu
-    </td>
-  </tr>  
- 
-  
- <!-- 第二行 -->
-  <tr>
-    <td>
-      四大交易费率
-    </td>
-    <td>
-      <a href="http://simnow.sfit.com.cn/product.action" target="_blank">
-        http://simnow.sfit.com.cn/product.action
-      </a>          
-    </td>
-    <td>
-      simnow 的说明
-    </td>
-  </tr>
-
-</table>
+<iframe name="toppage" width=100% height=100% marginwidth=0 marginheight=0 frameborder="no" border="0"  src="ChinaFutures.html" >
+</iframe> 
 
 <br />
 <br />
