--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<iframe name="toppage" width=100% height=100% marginwidth=0 marginheight=0 frameborder="no" border="0"  src="ChinaStocks.html" >
-</iframe> 
-<iframe name="toppage" width=100% height=100% marginwidth=0 marginheight=0 frameborder="no" border="0"  src="ChinaFutures.html" >
-</iframe> 
+<table>
+  <tr>
+    <iframe name="toppage" width=100% height=100% marginwidth=0 marginheight=0 frameborder="no" border="0"  src="ChinaStocks.html" >
+    </iframe>     
+  </tr>
+  <tr>
+    <iframe name="toppage" width=100% height=100% marginwidth=0 marginheight=0 frameborder="no" border="0"  src="ChinaFutures.html" >
+    </iframe> 
+  </tr>
+</table>
