--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<table>
-  <tr>
-    <iframe name="toppage" width=100% height=100% marginwidth=0 marginheight=0 frameborder="no" border="0"  src="ChinaFutures.html" >
-    </iframe>     
-  </tr>
-  <tr>
-    <iframe name="toppage" width=100% height=100% marginwidth=0 marginheight=0 frameborder="no" border="0"  src="ChinaStocks.html" >
-    </iframe> 
-  </tr>
-</table>
-
-<link rel="import" href="ChinaStocks.html">
+<iframe name="left" id="rightMain" src="left.html" frameborder="false" scrolling="auto" style="border:none;" width="100%" height="470" allowtransparency="true">
+</iframe>
+<iframe name="right" id="rightMain" src="right.html" frameborder="false" scrolling="auto" style="border:none;" width="100%" height="470" allowtransparency="true">
+</iframe>
