--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="false" scrolling="auto" style="border:none;" width="40%" height="470" allowtransparency="true">
+<iframe name="left" align = "left" id="rightMain" src="left.html" width="40%">
 </iframe>
-<iframe name="right" aligh = "right" id="rightMain" src="right.html" frameborder="false" scrolling="auto" style="border:none;" width="40%" height="470" allowtransparency="true">
+<iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" width="40%">
 </iframe>
