--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<iframe name="left" align = "left" id="rightMain" src="left.html" width="40%">
+<iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="0" width="40%">
 </iframe>
-<iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" width="40%">
+<iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" frameborder="0" width="40%">
 </iframe>
