--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="0" width="30%">
-</iframe>
-<iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
-</iframe>
+
+<div align = "center">
+  <iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="0" width="30%">
+  </iframe>
+  <iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
+  </iframe>
+</div>
