--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<div align = "center">
+<div align = "center" width = "60%">
   <iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="0" width="30%">
   </iframe>
   <iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
