--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
-
-<div align = "center" width = "60%">
-  <iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="0" width="30%">
-  </iframe>
-  <iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
-  </iframe>
-</div>
+<html>
+<head></head>
+  <body>
+  <table border="1" width="80%" height="50%">
+         <tr>
+           <td>
+            <iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="0" width="30%">
+            </iframe>
+           </td>
+           <td>  
+            <iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
+            </iframe>
+           </td>
+           <td>QQ</td>
+         </tr>
+         <tr>
+          <td>QQ</td>
+          <td>QQ</td>
+          <td>QQ</td>
+         </tr>
+         <tr>
+          <td>QQ</td>
+          <td>QQ</td>
+          <td>QQ</td>
+         </tr>
+  </table>
+</body>
+</html>
