--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
+
 <html>
 <head></head>
   <body>
-  <table border="1" width="80%" height="50%">
+    <table border="1" width="80%" height="50%" align = "center">
          <tr>
            <td>
-            <iframe name="left" align = "left" id="rightMain" src="left.html" frameborder="0" width="30%">
+            <iframe name="left" align = "right" id="rightMain" src="left.html" frameborder="0" width="30%">
             </iframe>
            </td>
            <td>  
-            <iframe name="right" aligh = "right" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
+            <iframe name="right" aligh = "left" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
             </iframe>
            </td>
-           <td>QQ</td>
          </tr>
-         <tr>
-          <td>QQ</td>
-          <td>QQ</td>
-          <td>QQ</td>
-         </tr>
-         <tr>
-          <td>QQ</td>
-          <td>QQ</td>
-          <td>QQ</td>
-         </tr>
-  </table>
-</body>
+    </table>
+  </body>
 </html>
