--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head></head>
   <body>
-    <table border="1" width="80%" height="50%" align = "center">
+    <table border="0" width="80%" align = "center">
          <tr>
            <td>
-            <iframe name="left" align = "right" id="rightMain" src="left.html" frameborder="0" width="30%">
+            <iframe name="left" align = "right" id="rightMain" src="items.html" frameborder="0" width="30%">
             </iframe>
            </td>
            <td>  
