--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <table border="0" width="80%" align = "center">
          <tr>
            <td>
-            <iframe name="left" align = "right" id="rightMain" src="items.html" frameborder="0" width="30%">
+            <iframe name="left" align = "right" id="rightMain" src="frameLeft.html" frameborder="0" width="30%">
             </iframe>
            </td>
            <td>  
