--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
   <body>
-    <table border="0" width="80%" align = "center">
+    <table border="0" width="80%" height="100%" align = "center">
          <tr>
            <td>
             <iframe name="left" align = "right" id="rightMain" src="frameLeft.html" frameborder="0" width="30%">
