--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <table border="0" width="80%" height="100%" align = "center">
          <tr>
            <td>
-            <iframe name="left" align = "right" id="rightMain" src="frameLeft.html" frameborder="0" width="30%">
+            <iframe name="left" align = "right" id="rightMain" src="frameLeft.html" frameborder="0" width="30%" height = "100%">
             </iframe>
            </td>
            <td>  
-            <iframe name="right" aligh = "left" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%">
+            <iframe name="right" aligh = "left" id="rightMain" src="ChinaFutures.html" frameborder="0" width="60%" height = "100%">
             </iframe>
            </td>
          </tr>
