--- a/frameLeft.html
+++ b/frameLeft.html
@@ -2,7 +2,7 @@
 <br/>
 <a href='ChinaStocks.html' target="right">中国股票市场</a>
 <br/>
-<a href='ChinaBanks.html' target="right">中国各大银行</a>
+<a href='ForexEvents.html' target="right">外汇重大事件</a>
 <br/>
 <a href='ChinaFuturesBrokers.html' target="right">中国期货公司</a>
 <br/>
