--- a/ForexEvents.html
+++ b/ForexEvents.html
@@ -2,7 +2,7 @@
 <!-- 标题 -->
 <table border="1" align="center">
   <tr>
-    <th>大陆交易所</th>
+    <th>外汇网站</th>
     <th>链接地址</th>
     <th>说明</th>
   </tr>
@@ -13,13 +13,12 @@
       dailyfx.com
     </td>
     <td>
-      <a href="https://www.dailyfx.com" target="_blank">
-        https://www.dailyfx.com
+      <a href="https://www.dailyfx.com/calendar" target="_blank">
+        https://www.dailyfx.com/calendar
       </a>          
     </td>
-    重大事件时间
     <td>
-      
+    重大事件时间
     </td>
   </tr>   
 </table>
